First commited as after_83318_rev1

--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -160,7 +160,7 @@
             <adapter type="org.eclipse.jgit.lib.Repository" />
          </factory>
          <factory
-               adaptableType="org.eclipse.resources.mapping.ResourceMapping"
+               adaptableType="org.eclipse.core.resources.mapping.ResourceMapping"
                class="org.eclipse.egit.ui.internal.factories.GitAdapterFactory">
             <adapter type="org.eclipse.jgit.lib.Repository" />
          </factory>
@@ -616,14 +616,18 @@
       <page
             class="org.eclipse.egit.ui.internal.repository.RepositoryPropertyPage"
             id="org.eclipse.egit.ui.property.RepositoryPropertyPage"
-            name="%RepositoryConfigPropertyPage"
-            objectClass="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode">
+            name="%RepositoryConfigPropertyPage">
+        <enabledWhen>
+           <instanceof value="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode" />
+        </enabledWhen>
       </page>
       <page
             class="org.eclipse.egit.ui.internal.repository.RepositoryStatisticsPage"
             id="org.eclipse.egit.ui.property.RepositoryStatisticsPage"
-            name="%RepositoryStatisticsPage"
-            objectClass="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode">
+            name="%RepositoryStatisticsPage">
+        <enabledWhen>
+           <instanceof value="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode" />
+        </enabledWhen>
       </page>
    </extension>
 
